--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-    <title>Practice Code</title>
-</head>
-
-<body>
-    <h1>Practice Code</h1>
-</body>
-
+<html lang="en"> <!--attribute-->
+ </head>
+    <title>hello</title> <!--elements-->
+  <head>
+  </body>
+ Hello world
+ <p> This is paragraph</p>
+ <h1>Heading 1 </h1>
+ <h2> Heading 2 </h2>
+ <h3>Heading 3 </h3>
+ <h4>Heading 4 </h4>
+ <h5>Heading 5</h5>
+ <h6>Heading 6</h6>
+  <strong>word</strong>  is <i>truth</i>
+  <ol>  <!--ukitaka kulist vitu ndo hivi-->
+    <li> Programing</li> <!--ukitaka kulist vitu ndo hivi-->
+    <li> mkombe</li>
+    <li> anakuja</li>
+    <li> majani</li>
+  </ol> <!--ukitaka kulist vitu ndo hivi-->
+<ul> <!--ukitaka kulist vitu ndo hivi-->
+    <li>Bitam</li>
+    <li>Bitamdasdd</li>
+    <li>sjfdkjd</li>
+    <li>eeklffkkdk</li>
+    <li>saxsskkssssssdldl</li>
+</ul>
+<a href="https//:mahmoudzanzibartours.com"> <!--ukitaka kuweka link ndo hivi-->
+    mahmoudzanzibar
+</a>
+<img src="p.jpg.jpg">  <!--ukitaka kuweka Image ndo hivi-->
+  </body>
 </html>
